Fixes background image vertical height and content position.
Background image now a minimum of 100vh but will stretch down if the
page content extends beyond 100vh.

The content is now roughly centered but doesn't ever overlap with the
background image food bits.

Deleted footnote comment from index.js.

Also changed to correct spelling of restaurant in the webpack config.

--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,14 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 1.8rem;
 }
 
 .backgroundImageBox {
-  height: 100%;
+  min-height: 100vh;
   font-family: sans-serif;
   background: url('./images/ingredients.jpg');
   background-size: cover;
@@ -29,7 +29,11 @@ body {
 }
 
 .allContent {
-  padding: 5% 25% 0 12%;
+  min-width: 600px;
+  padding-top: 100px;
+  padding-left: 5%;
+  margin-left: auto;
+  margin-right: 40%;
   max-width: 800px;
   font-family: bodyFont, sans-serif;
 }
